--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+4
+  shared_preferences: ^0.5.6+3
   notificare_push_lib: ^2.0.0
 
 dev_dependencies:
