--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,4 +69,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.1.4'
 
     implementation 're.notifica:notificare-core:2.2.1'
+    implementation 're.notifica:notificare-location:2.2.1'
 }
