--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.0+4
   shared_preferences: ^0.5.6+3
   notificare_push_lib: ^2.0.0
+  location_permissions: ^2.0.0
 
 dev_dependencies:
   flutter_test:
