Add webview with badge updates

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: ^0.5.6+3
   notificare_push_lib: ^2.0.0
   location_permissions: ^2.0.0
+  webview_flutter: ^0.3.19+9
 
 dev_dependencies:
   flutter_test:
