--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   notificare_push_lib: ^2.0.0
   location_permissions: ^2.0.0
   webview_flutter: ^0.3.19+9
+  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
