--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   location_permissions: ^2.0.0
   webview_flutter: ^0.3.19+9
   url_launcher: ^5.4.2
+  timeago: ^2.0.26
 
 dev_dependencies:
   flutter_test:
