--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   webview_flutter: ^0.3.19+9
   url_launcher: ^5.4.2
   timeago: ^2.0.26
+  package_info: ^0.4.0+16
+  flutter_email_sender: ^3.0.1
 
 dev_dependencies:
   flutter_test:
