--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   package_info: ^0.4.0+16
   flutter_email_sender: ^3.0.1
   intl: ^0.16.1
+  google_maps_flutter: ^0.5.25+3
+  location: ^3.0.2
 
 dev_dependencies:
   flutter_test:
