--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   intl: ^0.16.1
   google_maps_flutter: ^0.5.25+3
   location: ^3.0.2
+  cached_network_image: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
