--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,7 +39,7 @@ android {
 
     defaultConfig {
         applicationId "re.notifica.demo_flutter"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -77,4 +77,5 @@ dependencies {
     implementation 're.notifica:notificare-core:2.2.1'
     implementation 're.notifica:notificare-location:2.2.1'
     implementation 're.notifica:notificare-beacon:2.2.1'
+    implementation 're.notifica:notificare-scannable:2.2.1'
 }
