--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -73,6 +73,10 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:hardwareAccelerated="true" />
 
+        <!-- API key for Google Maps -->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="${googleMapsApiKey}" />
+
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
