Add google maps configuration

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,7 @@ google-services.json
 
 # Notificare configuration
 notificareconfig.properties
+Notificare.plist
+
+# iOS secrets
+ios/Runner/Secrets.swift
