--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -65,5 +65,21 @@
 	<false/>
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>re.notifica.demo</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>re.notifica</string>
+				<string>nc5e845721b4f0f36c86bcb10a</string>
+			</array>
+		</dict>
+	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>re.notifica</string>
+	</array>
 </dict>
 </plist>
