--- a/ios/Runner/Demo.entitlements
+++ b/ios/Runner/Demo.entitlements
@@ -15,7 +15,7 @@
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)re.notifica.demoFlutter</string>
+		<string>$(AppIdentifierPrefix)re.notifica.demo</string>
 	</array>
 </dict>
 </plist>
