Add dev app to the deep links

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -29,6 +29,7 @@
 			<array>
 				<string>re.notifica</string>
 				<string>nc5e845721b4f0f36c86bcb10a</string>
+				<string>nc585702253cad4414df0e3b20</string>
 			</array>
 		</dict>
 	</array>
@@ -41,9 +42,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NFCReaderUsageDescription</key>
-	<string>We will need access to your phone's NFC Reader in order to unlock new content.</string>
+	<string>We will need access to your phone&apos;s NFC Reader in order to unlock new content.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>We will need access to the device's camera to reply to notifications or scan QR codes.</string>
+	<string>We will need access to the device&apos;s camera to reply to notifications or scan QR codes.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>You will need to select the Always Allow option if you wish to receive geo-fencing and beacon notifications. Selecting the option Only While Using the App will prevent us from sending you these messages.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
