--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,8 +87,9 @@ dependencies {
     // Add the SDK for Firebase Cloud Messaging
     implementation 'com.google.firebase:firebase-messaging:20.1.4'
 
-    implementation 're.notifica:notificare-core:2.2.1'
-    implementation 're.notifica:notificare-location:2.2.1'
-    implementation 're.notifica:notificare-beacon:2.2.1'
-    implementation 're.notifica:notificare-scannable:2.2.1'
+    def notificare_version = '2.4.0-beta-4'
+    implementation "re.notifica:notificare-core:$notificare_version"
+    implementation "re.notifica:notificare-location:$notificare_version"
+    implementation "re.notifica:notificare-beacon:$notificare_version"
+    implementation "re.notifica:notificare-scannable:$notificare_version"
 }
