--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+4
   shared_preferences: ^0.5.6+3
-  notificare_push_lib: ^2.0.0
+  notificare_push_lib: ^2.4.0-beta.1
   location_permissions: ^2.0.0
   webview_flutter: ^0.3.19+9
   url_launcher: ^5.4.2
