--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,21 +22,22 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  http: ^0.12.0+4
-  shared_preferences: ^0.5.6+3
-  notificare_push_lib: ^2.4.0-beta.1
-  location_permissions: ^2.0.0
-  webview_flutter: ^0.3.19+9
-  url_launcher: ^5.4.2
-  timeago: ^2.0.26
-  package_info: ^0.4.0+16
-  flutter_email_sender: ^3.0.1
-  intl: ^0.16.1
-  google_maps_flutter: ^0.5.25+3
-  location: ^3.0.2
-  cached_network_image: ^2.1.0+1
-  uni_links: ^0.2.0
+  cupertino_icons: ^1.0.2
+  http: ^0.13.1
+  shared_preferences: ^2.0.5
+  notificare_push_lib:
+    path: /Users/hpinhal/Developer/notificare/sdks/notificare-push-lib-flutter
+  webview_flutter: ^2.0.2
+  url_launcher: ^6.0.2
+  timeago: ^3.0.2
+  package_info: ^2.0.0
+  flutter_email_sender: ^5.0.0
+  intl: ^0.17.0
+  google_maps_flutter: ^2.0.1
+  location: ^4.1.1
+  cached_network_image: ^3.0.0-nullsafety
+  permission_handler: ^6.1.1
+  uni_links2: ^0.6.0+2
 
 dev_dependencies:
   flutter_test:
