--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -25,8 +25,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.1
   shared_preferences: ^2.0.5
-  notificare_push_lib:
-    path: /Users/hpinhal/Developer/notificare/sdks/notificare-push-lib-flutter
+  notificare_push_lib: ^2.0.0
+#    path: /Users/hpinhal/Developer/notificare/sdks/notificare-push-lib-flutter
   webview_flutter: ^2.0.2
   url_launcher: ^6.0.2
   timeago: ^3.0.2
@@ -38,6 +38,7 @@ dependencies:
   cached_network_image: ^3.0.0-nullsafety
   permission_handler: ^6.1.1
   uni_links2: ^0.6.0+2
+  collection: ^1.15.0-nullsafety.4
 
 dev_dependencies:
   flutter_test:
