--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,13 +25,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.1
   shared_preferences: ^2.0.5
-  notificare_push_lib: ^2.6.2
+  notificare_push_lib: ^2.7.3
 #    path: /Users/hpinhal/Developer/notificare/sdks/notificare-push-lib-flutter
   webview_flutter: ^2.0.2
   url_launcher: ^6.0.2
   timeago: ^3.0.2
   package_info: ^2.0.0
-  flutter_email_sender: ^5.0.0
+#  flutter_email_sender: ^5.0.0
   intl: ^0.17.0
   google_maps_flutter: ^2.0.1
   location: ^4.1.1
